--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <div class="portfolio-container bd-grid">
                 <div class="portfolio-img">
-                    <img src="https://i.postimg.cc/c4LgMqgK/work1.jpg" alt="work image">
+                    <img src="https://photos.app.goo.gl/EUtrasoJhMDWRVVx8" alt="work image">
 
                     <div class="portfolio-link">
                         <a href="#" class="portfolio-link-name">View Details</a>
@@ -107,7 +107,7 @@
                 </div>
 
                 <div class="portfolio-img">
-                    <img src="https://i.postimg.cc/CxZRXj4S/work2.jpg" alt="work image">
+                    <img src="https://photos.app.goo.gl/DWwnsJMeB9ZdZCUJ6" alt="work image">
 
                     <div class="portfolio-link">
                         <a href="#" class="portfolio-link-name">View Details</a>
@@ -115,7 +115,7 @@
                 </div>
 
                 <div class="portfolio-img">
-                    <img src="https://i.postimg.cc/wjS1p7WJ/work3.jpg" alt="work image">
+                    <img src="https://photos.app.goo.gl/gmTZGiGo3Jz5wEnD7" alt="work image">
 
                     <div class="portfolio-link">
                         <a href="#" class="portfolio-link-name">View Details</a>
