Expand home.html with new sections and content
The HTML structure was significantly expanded, adding sections for pitch, projects, and detailed content about skills, experience, and education.

--- a/home.html
+++ b/home.html
@@ -72,11 +72,11 @@
                     </div>
 
                     <div class="timeline-item">
-                        <div class="timeline-date">April 2022 - 2024</div>
+                        <div class="timeline-date">2021 - 2024</div>
                         <div class="timeline-content">
                             <h4>West African Secondary School Certificate (WASSCE)</h4>
                             <p class="institution">Ghanata Senior High School</p>
-                            <p class="description">Graduated with honors. Developed strong foundation in mathematics and sciences.</p>
+                            <p class="description">Graduated with honors. Developed foundation in mathematics and sciences.</p>
                         </div>
                     </div>
                 </div>
@@ -108,7 +108,7 @@
                     </div>
 
                     <div class="timeline-item">
-                        <div class="timeline-date">2022 - 2023</div>
+                        <div class="timeline-date">2021 - 2023</div>
                         <div class="timeline-content">
                             <h4>Graphic Design Apprentice</h4>
                             <p class="institution">KingPee Prints</p>
@@ -169,6 +169,267 @@
                         <li>Video Conferencing & Team Tools</li>
                     </ul>
                 </div>
+            </div>
+        </div>
+    </section>
+
+
+
+<!--Pitch Section-->
+    <section class="pitch" id="pitch">
+        <div class="pitch-container">
+            <h2 class="section-title">Why Work With Me?</h2>
+
+            <!-- Main Pitch -->
+            <div class="pitch-intro">
+                <p class="pitch-highlight">I bring a unique combination of technical cybersecurity knowledge and creative expertise to deliver comprehensive digital solutions that are both secure and visually compelling.</p>
+            </div>
+
+            <!-- Value Propositions -->
+            <div class="value-props">
+                <div class="value-card">
+                    <div class="value-icon">🛡️</div>
+                    <h3>Security-First Mindset</h3>
+                    <p>As a cybersecurity student, I approach every project with security and data protection at the forefront, ensuring your digital assets are safe while being functional and beautiful.</p>
+                </div>
+
+                <div class="value-card">
+                    <div class="value-icon">🎨</div>
+                    <h3>Creative Excellence</h3>
+                    <p>My graphic design and content creation skills ensure your brand stands out with visually stunning materials that capture attention and drive engagement across all platforms.</p>
+                </div>
+
+                <div class="value-card">
+                    <div class="value-icon">⚙️</div>
+                    <h3>Operational Efficiency</h3>
+                    <p>With expertise in virtual assistance and digital operations, I streamline your workflows, manage your schedule, and handle administrative tasks so you can focus on what matters most.</p>
+                </div>
+
+                <div class="value-card">
+                    <div class="value-icon">📱</div>
+                    <h3>Social Media Savvy</h3>
+                    <p>I create compelling content strategies and manage your social media presence to build authentic connections with your audience and grow your online community.</p>
+                </div>
+
+                <div class="value-card">
+                    <div class="value-icon">🎯</div>
+                    <h3>Results-Driven Approach</h3>
+                    <p>Every project I undertake is focused on delivering measurable results. I combine analytics with creativity to ensure your goals are not just met, but exceeded.</p>
+                </div>
+
+                <div class="value-card">
+                    <div class="value-icon">🤝</div>
+                    <h3>Reliable Partnership</h3>
+                    <p>With strong emotional intelligence and excellent communication skills, I become an extension of your team—dependable, proactive, and always aligned with your vision.</p>
+                </div>
+            </div>
+
+            <!-- What I Offer -->
+            <div class="services-section">
+                <h3 class="subsection-title-pitch">What I Can Do For You</h3>
+                <div class="services-grid">
+                    <div class="service-item">
+                        <div class="service-header">
+                            <span class="service-number">01</span>
+                            <h4>Cybersecurity Consulting</h4>
+                        </div>
+                        <p>Security audits, vulnerability assessments, and recommendations to protect your digital infrastructure from threats.</p>
+                    </div>
+
+                    <div class="service-item">
+                        <div class="service-header">
+                            <span class="service-number">02</span>
+                            <h4>Graphic Design & Branding</h4>
+                        </div>
+                        <p>Logo design, brand identity development, marketing materials, and visual content that tells your story.</p>
+                    </div>
+
+                    <div class="service-item">
+                        <div class="service-header">
+                            <span class="service-number">03</span>
+                            <h4>Virtual Assistance</h4>
+                        </div>
+                        <p>Executive calendar management, email organization, appointment setting, travel planning, and administrative support.</p>
+                    </div>
+
+                    <div class="service-item">
+                        <div class="service-header">
+                            <span class="service-number">04</span>
+                            <h4>Social Media Management</h4>
+                        </div>
+                        <p>Content creation, posting schedules, community engagement, analytics reporting, and strategy development.</p>
+                    </div>
+
+                    <div class="service-item">
+                        <div class="service-header">
+                            <span class="service-number">05</span>
+                            <h4>Content Creation</h4>
+                        </div>
+                        <p>Blog posts, social media content, video editing, copywriting, and multimedia content tailored to your audience.</p>
+                    </div>
+
+                    <div class="service-item">
+                        <div class="service-header">
+                            <span class="service-number">06</span>
+                            <h4>Project Management</h4>
+                        </div>
+                        <p>Planning, coordination, and execution of digital projects with clear timelines and deliverables.</p>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Call to Action -->
+            <div class="pitch-cta">
+                <h3>Ready to Elevate Your Digital Presence?</h3>
+                <p>Let's collaborate to bring your vision to life with security, creativity, and efficiency.</p>
+                <a href="#contact" class="cta-button-pitch">Start a Conversation</a>
+            </div>
+        </div>
+    </section>
+
+
+
+<!--Projects Page-->
+    <section class="projects" id="projects">
+        <div class="projects-container">
+            <h2 class="section-title">My Projects</h2>
+
+            <div class="projects-intro">
+                <p>Explore a collection of my work spanning cybersecurity, design, content creation, and digital operations. Each project showcases my commitment to excellence and innovative problem-solving.</p>
+            </div>
+
+            <!-- Filter Categories -->
+            <div class="project-filters">
+                <button class="filter-btn active" data-filter="all">All Projects</button>
+        <!--    <button class="filter-btn" data-filter="cybersecurity">Cybersecurity</button> -->
+                <button class="filter-btn" data-filter="design">Design</button>
+                <button class="filter-btn" data-filter="content">Content & Social Media</button>
+                <button class="filter-btn" data-filter="operations">Operations</button>
+            </div>
+
+            <!-- Projects Grid -->
+            <div class="projects-grid">
+
+                <!-- Project 1 - Replace with your actual Google Drive embed -->
+        <!--        <div class="project-card" data-category="cybersecurity">
+                    <div class="project-preview">
+                        <iframe src="https://docs.google.com/document/d/YOUR_DOCUMENT_ID/preview" frameborder="0"></iframe>
+                    </div>
+                    <div class="project-info">
+                        <h3>Security Audit Report</h3>
+                        <p class="project-category">Cybersecurity</p>
+                        <p class="project-description">Comprehensive security assessment and vulnerability analysis with actionable recommendations.</p>
+                        <div class="project-tags">
+                            <span class="tag">Google Docs</span>
+                            <span class="tag">Security</span>
+                        </div>
+                        <a href="https://docs.google.com/document/d/YOUR_DOCUMENT_ID/edit" target="_blank" class="project-link">View Full Project →</a>
+                    </div>
+                </div>
+        -->
+                <!-- Project 2 -->
+                <div class="project-card" data-category="design">
+                    <div class="project-preview">
+            <!--        <iframe src="https://docs.google.com/presentation/d/YOUR_PRESENTATION_ID/preview" frameborder="0"></iframe>
+            -->     </div>
+                    <div class="project-info">
+                        <h3>Cyber Security Awareness</h3>
+                        <p class="project-category">Design</p>
+                        <p class="project-description">Complete brand identity package including logo concepts, color palette, and style guide.</p>
+                        <div class="project-tags">
+                            <span class="tag">Adobe Photoshop</span>
+                            <span class="tag">Awareness</span>
+                        </div>
+                        <a href="https://docs.google.com/presentation/d/YOUR_PRESENTATION_ID/edit" target="_blank" class="project-link">View Full Project →</a>
+                    </div>
+                </div>
+
+                <!-- Project 3 -->
+                <div class="project-card" data-category="content">
+                    <div class="project-preview">
+                        <iframe src="https://docs.google.com/spreadsheets/d/YOUR_SHEET_ID/preview" frameborder="0"></iframe>
+                    </div>
+                    <div class="project-info">
+                        <h3>Social Media Track Sheet</h3>
+                        <p class="project-category">Content & Social Media</p>
+                        <p class="project-description">30-day content calendar with post schedules, captions, and engagement analytics tracking.</p>
+                        <div class="project-tags">
+                            <span class="tag">Google Sheets</span>
+                            <span class="tag">Social Media</span>
+                        </div>
+                        <a href="https://docs.google.com/spreadsheets/d/YOUR_SHEET_ID/edit" target="_blank" class="project-link">View Full Project →</a>
+                    </div>
+                </div>
+
+                <!-- Project 4 -->
+                <div class="project-card" data-category="operations">
+                    <div class="project-preview">
+                        <iframe src="https://docs.google.com/spreadsheets/d/YOUR_SHEET_ID/preview" frameborder="0"></iframe>
+                    </div>
+                    <div class="project-info">
+                        <h3>Meeting Agenda</h3>
+                        <p class="project-category">Operations</p>
+                        <p class="project-description">Automated project tracking system with task assignments, deadlines, and progress indicators.</p>
+                        <div class="project-tags">
+                            <span class="tag">Google Docs</span>
+                            <span class="tag">Project Management</span>
+                        </div>
+                        <a href="https://docs.google.com/spreadsheets/d/YOUR_SHEET_ID/edit" target="_blank" class="project-link">View Full Project →</a>
+                    </div>
+                    
+                </div>
+
+                <!-- Project 5 -->
+                <div class="project-card" data-category="design">
+                    <div class="project-preview">
+                        <iframe src="https://docs.google.com/presentation/d/YOUR_PRESENTATION_ID/preview" frameborder="0"></iframe>
+                    </div>
+                    <div class="project-info">
+                        <h3>Restaurant Menu Design</h3>
+                        <p class="project-category">Design</p>
+                        <p class="project-description">Visual presentation for multi-channel marketing campaign with creative concepts and strategy.</p>
+                        <div class="project-tags">
+                            <span class="tag">Google Slides</span>
+                            <span class="tag">Restaurant Design</span>
+                        </div>
+                        <a href="https://docs.google.com/presentation/d/YOUR_PRESENTATION_ID/edit" target="_blank" class="project-link">View Full Project →</a>
+                    </div>
+                </div>
+
+                <!-- Project 6 -->
+                <div class="project-card" data-category="cybersecurity">
+                    <div class="project-preview">
+                        <iframe src="https://docs.google.com/presentation/d/1_mTcWhE1_KfuJXV7o9BqPVwgm7U8h_4cb4w29mJtKuM/edit?usp=drive_link" frameborder="0"></iframe>
+                    </div>
+                    <div class="project-info">
+                        <h3>Travel Itinerary Presentation</h3>
+                        <p class="project-category">Operations</p>
+                        <p class="project-description">Detailed documentation of security protocols and best practices for network infrastructure.</p>
+                        <div class="project-tags">
+                            <span class="tag">Google Slides</span>
+                            <span class="tag">Itinerary</span>
+                        </div>
+                        <a href="https://docs.google.com/presentation/d/1_mTcWhE1_KfuJXV7o9BqPVwgm7U8h_4cb4w29mJtKuM/edit?usp=drive_link" target="_blank" class="project-link">View Full Project →</a>
+                    </div>
+                </div>
+
+                <!-- Project 7 -->
+                <div class="project-card" data-category="design">
+                    <div class="project-preview">
+                        <iframe src="https://docs.google.com/presentation/d/1iij0swV2M-uPiX-ZW9jAcVTbDbz8WITLHQ8vKdlauXE/edit?usp=drive_link" frameborder="0"></iframe>
+                    </div>
+                    <div class="project-info">
+                        <h3>Research Work Sample</h3>
+                        <p class="project-category">Operations</p>
+                        <p class="project-description">Presentation on traffic congestion and nonfunctioning streetlights in Accra.</p>
+                        <div class="project-tags">
+                            <span class="tag">Google Slides</span>
+                            <span class="tag">Research Work</span>
+                        </div>
+                        <a href="https://docs.google.com/presentation/d/1iij0swV2M-uPiX-ZW9jAcVTbDbz8WITLHQ8vKdlauXE/edit?usp=drive_link" target="_blank" class="project-link">View Full Project →</a>
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
