--- a/home.html
+++ b/home.html
@@ -330,17 +330,17 @@
                 <!-- Project 2 -->
                 <div class="project-card" data-category="design">
                     <div class="project-preview">
-            <!--        <iframe src="https://docs.google.com/presentation/d/YOUR_PRESENTATION_ID/preview" frameborder="0"></iframe>
-            -->     </div>
+                    <iframe src="https://docs.google.com/spreadsheets/d/1HzzCGLr8r12Ay_fx4vnx_-ZYk2Qb6GmBCaRHqRduzI8/edit?usp=sharing" frameborder="0"></iframe>
+                </div>
                     <div class="project-info">
-                        <h3>Cyber Security Awareness</h3>
-                        <p class="project-category">Design</p>
+                        <h3>Monthly Expense Tracker</h3>
+                        <p class="project-category">Operations</p>
                         <p class="project-description">Complete brand identity package including logo concepts, color palette, and style guide.</p>
                         <div class="project-tags">
-                            <span class="tag">Adobe Photoshop</span>
-                            <span class="tag">Awareness</span>
+                            <span class="tag">Google Sheets</span>
+                            <span class="tag">Tracker</span>
                         </div>
-                        <a href="https://docs.google.com/presentation/d/YOUR_PRESENTATION_ID/edit" target="_blank" class="project-link">View Full Project →</a>
+                        <a href="https://docs.google.com/spreadsheets/d/1HzzCGLr8r12Ay_fx4vnx_-ZYk2Qb6GmBCaRHqRduzI8/edit?usp=sharing" target="_blank" class="project-link">View Full Project →</a>
                     </div>
                 </div>
 
