Update fmt.Println message from 'Hello' to 'Goodbye'

--- a/index.html
+++ b/index.html
@@ -364,17 +364,17 @@
                 <!-- Project 4 -->
                 <div class="project-card" data-category="operations">
                     <div class="project-preview">
-                        <iframe src="https://docs.google.com/spreadsheets/d/YOUR_SHEET_ID/preview" frameborder="0"></iframe>
+                        <iframe src="https://docs.google.com/document/d/1zy8m0yoZVoaZw9_6Si-5YELgVMxG_nBT4OHryh2144Y/edit?usp=sharing" frameborder="0"></iframe>
                     </div>
                     <div class="project-info">
-                        <h3>Meeting Agenda</h3>
+                        <h3>Meeting Agenda Sample</h3>
                         <p class="project-category">Operations</p>
-                        <p class="project-description">Automated project tracking system with task assignments, deadlines, and progress indicators.</p>
+                        <p class="project-description">A concise example of structured meeting documentation, showcasing clear organization and effective note-taking.</p>
                         <div class="project-tags">
                             <span class="tag">Google Docs</span>
                             <span class="tag">Project Management</span>
                         </div>
-                        <a href="https://docs.google.com/spreadsheets/d/YOUR_SHEET_ID/edit" target="_blank" class="project-link">View Full Project →</a>
+                        <a href="https://docs.google.com/document/d/1zy8m0yoZVoaZw9_6Si-5YELgVMxG_nBT4OHryh2144Y/edit?usp=sharing="_blank" class="project-link">View Full Project →</a>
                     </div>
                     
                 </div>
@@ -442,4 +442,5 @@
     <script src="home_script.js"></script>
 </body>
 </html>
+
 
