--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         window.dataLayer = window.dataLayer || [];
         function gtag(){dataLayer.push(arguments);}
         gtag('js', new Date());
-    
+
         gtag('config', 'G-2SM2NY39QG');
     </script>
 </head>
@@ -97,6 +97,15 @@
                         <div class="timeline-content">
                             <h4>West African Secondary School Certificate (WASSCE)</h4>
                             <p class="institution">Ghanata Senior High School</p>
+                            <p class="description">Graduated with honors. Developed foundation in mathematics and sciences.</p>
+                        </div>
+                    </div>
+
+                    <div class="timeline-item">
+                        <div class="timeline-date">2018 - 2021</div>
+                        <div class="timeline-content">
+                            <h4>Basic Education Certificate Examination (BECE)</h4>
+                            <p class="institution">Immanuel Presbyterian Basic School</p>
                             <p class="description">Graduated with honors. Developed foundation in mathematics and sciences.</p>
                         </div>
                     </div>
